first and final

--- a/index.html
+++ b/index.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>WEB dev challenge 2025</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Module-S</title>
+  </head>
+  <body>
+    <nav>
+      <img src="img/jadoo.png" class="imagelogo" />
+      <div class="navitems">Destinations Hotels Fights Bookings</div>
+    </nav>
+    <aside>
+      <div class="text">Travel, enjoy and live a new and full life</div>
 
-<script src="script.js"></script>
-</body>
+      <div class="imagediv">
+        <img src="img/girl.png" class="hello" />
+      </div>
+    </aside>
+    <aside>
+      <div class="maintext">Category</div>
+      <div class="maintext">We Offer Best Services</div>
+      <div class="maingrid">
+        <div class="grid-1">
+          Calculated Weather
+          <div class="subtext">
+            Built Wicket longer admire do barton vanity itself do in it.
+          </div>
+        </div>
+        <div class="grid-2">
+          Best Flights
+          <div class="subtext">
+            Engrossed listening. Park gate sell they west hard for the.
+          </div>
+        </div>
+        <div class="grid-3">
+          Local Events
+          <div class="subtext">
+            Barton vanity itself do in it. Preferd to men it engrossed
+            listening.
+          </div>
+        </div>
+        <div class="grid-4">
+          Customization
+
+          <div class="subtext">
+            We deliver outsourced aviation services for military customers
+          </div>
+        </div>
+      </div>
+    </aside>
+    <aside>
+      <div class="subgrid">
+        <div class="grid-5">
+          <aside class="rome">
+            <img src="img/rome.png" class="rome" />
+          </aside>
+        </div>
+        <div class="grid-6">
+          <aside class="london">
+            <img src="img/london.png" class="london" />
+          </aside>
+        </div>
+        <div class="grid-7">
+          <aside class="europe">
+            <img src="img/europe.png" class="europe" />
+          </aside>
+        </div>
+      </div>
+    </aside>
+  </body>
 </html>
